Wed Dec  2 07:51:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/copy-script.sh:
          Also copy md5 files

        * bin/MakeProjectCreator/config/bmake.features:
          Enable mcpp for bmake

Thu Nov 26 02:08:59 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * Gaurav Kulshreshtha is the 2300th contributor to ACE+TAO+CIAO!

Mon Nov 30 19:11:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/gperf/src/Bool_Array.h:
        * apps/gperf/src/Key_List.h:
          C++ Builder 2010 fixes

Mon Nov 30 14:02:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Process.cpp:
        * ace/Process.h:
          Fixed gcc warnings

Mon Nov 30 12:38:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-borland.h:
          Started port to C++ Builder 2010, older versions of C++ Builder are
          now deprecated

        * ace/MMAP_Memory_Pool.cpp:
          Layout change

        * ace/OS_NS_sys_time.h:
        * ace/OS_NS_sys_time.inl:
          Removed workarounds for ancient wince versions

        * ace/Process.cpp:
        * ace/Process.h:
          Use bool and size_t and removed some ugly casts

        * ace/Trace.cpp:
        * ace/Trace.h:
          Use bool

Mon Nov 30 10:53:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debianbuild/patches/18-fix-bswap-detection.dpatch:
        * debianbuild/patches/22-tao_idl-64bit-fix.dpatch:
          Removed, not needed anymore

Mon Nov 30 10:08:00 UTC 2009  Martin Corino <mcorino@remedy.nl>

        * include/makeinclude/platform_linux_common.GNU:

          Added some rules to support cross builds.
          Setting the environment variable (or make variable) CROSS_COMPILE
          to the platform tool prefix will redefine the CC, CXX and AR
          variables and add a '-Wl,-rpath-link' option to the LDFLAGS.
          If the HOST_ROOT variable has been set as well TAO_IDLxxx variables